--- a/Veterinary.CleanArchitecture.Application/Veterinary.CleanArchitecture.Application.csproj
+++ b/Veterinary.CleanArchitecture.Application/Veterinary.CleanArchitecture.Application.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="FluentResults" Version="3.16.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Veterinary.CleanArchitecture.Domain\Veterinary.CleanArchitecture.Domain.csproj" />
+    </ItemGroup>
 </Project>
